# duorou_gui

./: .gitignore  CMakeLists.txt
doc/: Editor.md  Editor_TODO.md  SwiftUI.md
editor/: CMakeLists.txt
editor/include/editor/: editor_view.hpp  editor_view_common.hpp  editor_view_history.hpp  editor_view_insert.hpp  editor_view_panels_left.hpp  editor_view_panels_right.hpp  editor_view_style.hpp  editor_view_theme_utils.hpp  editor_view_tree_ops.hpp
editor/src/: main.cpp
examples/: terminal_view.hpp
include/duorou/ui/: base_layout.hpp  base_node.hpp  base_render.hpp  component_box.hpp  component_button.hpp  component_canvas.hpp  component_checkbox.hpp  component_column.hpp  component_divider.hpp  component_geometryreader.hpp  component_grid.hpp  component_image.hpp  component_row.hpp  component_scrollview.hpp  component_slider.hpp  component_spacer.hpp  component_text.hpp  component_textfield.hpp  layout.hpp  node.hpp  render.hpp  runtime.hpp  style_parser.hpp
openspec/: project.md
src/: gpu_gl.cpp  gpu_metal.mm  main.cpp
