cmake_minimum_required(VERSION 3.20)

project(duorou_gui LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_library(duorou_ui INTERFACE)
target_include_directories(duorou_ui INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)

add_executable(duorou_demo src/main.cpp)
target_link_libraries(duorou_demo PRIVATE duorou_ui)

if(APPLE)
  enable_language(OBJCXX)
  add_executable(duorou_gpu_demo src/gpu_metal.mm)
  target_include_directories(duorou_gpu_demo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/examples)
  target_link_libraries(duorou_gpu_demo PRIVATE duorou_ui "-framework Cocoa" "-framework CoreGraphics" "-framework CoreText" "-framework Metal" "-framework MetalKit" "-framework QuartzCore")
  target_compile_options(duorou_gpu_demo PRIVATE -fobjc-arc)
elseif(WIN32)
  add_executable(duorou_gpu_demo src/gpu_gl.cpp)
  target_include_directories(duorou_gpu_demo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/examples)
  find_package(glfw3 REQUIRED)
  find_package(Freetype QUIET)
  if(TARGET glfw)
    set(DUOROU_GLFW_TARGET glfw)
  elseif(TARGET glfw3::glfw)
    set(DUOROU_GLFW_TARGET glfw3::glfw)
  endif()
  if(NOT DUOROU_GLFW_TARGET)
    message(FATAL_ERROR "glfw3 found but no CMake target exported")
  endif()
  target_link_libraries(duorou_gpu_demo PRIVATE duorou_ui ${DUOROU_GLFW_TARGET} opengl32 user32 gdi32 shell32 comdlg32)
  if(TARGET Freetype::Freetype)
    target_link_libraries(duorou_gpu_demo PRIVATE Freetype::Freetype)
    target_compile_definitions(duorou_gpu_demo PRIVATE DUOROU_HAS_FREETYPE=1)
  endif()
elseif(UNIX)
  add_executable(duorou_gpu_demo src/gpu_gl.cpp)
  target_include_directories(duorou_gpu_demo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/examples)
  find_package(OpenGL REQUIRED)
  find_package(X11 REQUIRED)
  find_package(glfw3 REQUIRED)
  find_package(Freetype QUIET)
  if(TARGET glfw)
    set(DUOROU_GLFW_TARGET glfw)
  elseif(TARGET glfw3::glfw)
    set(DUOROU_GLFW_TARGET glfw3::glfw)
  endif()
  if(NOT DUOROU_GLFW_TARGET)
    message(FATAL_ERROR "glfw3 found but no CMake target exported")
  endif()
  target_link_libraries(duorou_gpu_demo PRIVATE duorou_ui ${DUOROU_GLFW_TARGET} OpenGL::GL X11::X11)
  if(TARGET Freetype::Freetype)
    target_link_libraries(duorou_gpu_demo PRIVATE Freetype::Freetype)
    target_compile_definitions(duorou_gpu_demo PRIVATE DUOROU_HAS_FREETYPE=1)
  endif()
endif()
